feat: visual redesign

--- a/index2.html
+++ b/index2.html
@@ -14,8 +14,8 @@
     <ul>
         <li><a href="#input">Overview</a></li>
         <li><a href="#problems">Problems</a></li>
-        <li><a href="#states">3</a></li>
-        <li><a href="#reflection">4</a></li>
+        <li><a href="#visuals">Visual Redesign</a></li>
+        <li><a href="#redesign">Responsive Redesign</a></li>
     </ul>
   </nav> 
   <h1 class="header">Responsive Redesign:<br>Politechnika Krakowska</h1>
@@ -32,60 +32,66 @@
         <div><img src="images/tablet.png" alt="Tablet Display (768 x 1024px)"><p>Tablet (768 x 1024px)</p></div>
         <div><img src="images/phone.png" alt="Mobile Display (375 x 667px)"><p>Mobile (375 x 667px)</p></div>
       </div>
-      <table>
-        <thead>
-            <tr>
-                <th>Key Issues Identified</th>
-                <th>Description</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Navigation & Efficiency</td>
-                <td>
-                    <ul>
-                        <li><u>Overwhelming Dropdown Menus:</u> The submenus are cluttered with unrelated items, increasing cognitive load.</li>
-                        <li><u>Redundant Elements:</u> Multiple navbars (5 of them!) and the unnecessary accessibility toolbar (with unlabeled and adding-confusion options easily accessible via built-in tools) add confusion.</li>
-                        <li><u>Poor Visibility of Critical Features:</u> Important elements blend into sponsor logos.</li>
-                        <li><u>Poor Navbar Positioning:</u> Users must scroll up to access menus.</li>
-                    </ul>
-                </td>
-            </tr>
-            <tr>
-                <td>Learnability</td>
-                <td>
-                    <ul>
-                        <li><u>Inconsistent Design Language:</u> Disjointed color schemes hinder navigation.</li>
-                        <li><u>Overloaded Homepage:</u> Too much text and visuals bury key actions.</li>
-                        <li><u>Unclear CTAs:</u> Buttons lack visual priority.</li>
-                    </ul>
-                </td>
-            </tr>
-            <tr>
-                <td>Memorability</td>
-                <td>
-                    <ul>
-                        <li><u>Generic Aesthetic:</u> The text-heavy design fails to leave an impression.</li>
-                        <li><u>Poor Spatial Awareness:</u> Users struggle to retrace steps with the amount of inconsistent visual cues.</li>
-                    </ul>
-                </td>
-            </tr>
-            <tr>
-                <td>Accessibility</td>
-                <td>
-                    <ul>
-                        <li><u>Low Contrast Ratios:</u> Most text fails WCAG standards. Low contrast between text and background colors, with text sharing similar shades of blue.</li>
-                        <li><u>Unlabeled Interactive Elements:</u> Icons lack alt text and/or labels.</li>
-                        <li><u>Non-Responsive Components:</u> Critical content is cut off on narrow screens and viewports different than desktop.</li>
-                    </ul>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-
-        <h3>2.1. Desktop</h3>
-        <p>Politechnika Krakowska's desktop site is cluttered, with a dated design that lacks visual hierarchy. The site's navigation is confusing, with links scattered across the page. The site's content is also outdated, with information on the architecture program difficult to find.</p>
+          <table>
+            <thead>
+                <tr>
+                    <th>Key Issues Identified</th>
+                    <th>Description</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Navigation & Efficiency</td>
+                    <td>
+                        <ul>
+                            <li><u>Overwhelming Dropdown Menus:</u> The submenus are cluttered with unrelated items, increasing cognitive load.</li>
+                            <li><u>Redundant Elements:</u> Multiple navbars (5 of them!) and the unnecessary accessibility toolbar (with unlabeled and adding-confusion options easily accessible via built-in tools) add confusion.</li>
+                            <li><u>Poor Visibility of Critical Features:</u> Important elements blend into sponsor logos.</li>
+                            <li><u>Poor Navbar Positioning:</u> Users must scroll up to access menus.</li>
+                        </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Learnability</td>
+                    <td>
+                        <ul>
+                            <li><u>Inconsistent Design Language:</u> Disjointed color schemes hinder navigation.</li>
+                            <li><u>Overloaded Homepage:</u> Too much text and visuals bury key actions.</li>
+                            <li><u>Unclear CTAs:</u> Buttons lack visual priority.</li>
+                        </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Memorability</td>
+                    <td>
+                        <ul>
+                            <li><u>Generic Aesthetic:</u> The text-heavy design fails to leave an impression.</li>
+                            <li><u>Poor Spatial Awareness:</u> Users struggle to retrace steps with the amount of inconsistent visual cues.</li>
+                        </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Accessibility</td>
+                    <td>
+                        <ul>
+                            <li><u>Low Contrast Ratios:</u> Most text fails WCAG standards. Low contrast between text and background colors, with text sharing similar shades of blue.</li>
+                            <li><u>Unlabeled Interactive Elements:</u> Icons lack alt text and/or labels.</li>
+                            <li><u>Non-Responsive Components:</u> Critical content is cut off on narrow screens and viewports different than desktop.</li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
       </div>
+    </section>
+    <section id="visuals">
+      <h2>3. Visual Redesign</h2>
+      <p>My redesign focuses on enhancing the site's visual appeal and usability, featuring a clean, modern aesthetic with a focus on intuitive navigation and accessibility. <br><br>Prior to addressing all of the issues mentioned within the <a href="#problems">problems section</a> and ensuring responsiveness accross all screen sizes, I first crafted a cohesive visual identity reflective of the university's architectural focus, including novel logos, custom typography, and a color palette rooted in Politechnika's heritage.</p>
+      <img src="images/visuals.png" alt="Visual Redesign">
+      <p><br><br>Second, I restructured the site's layout through mockups incorporating that aesthetic using Figma. The redesign features a simplified, user-friendly navigation system, with a focus on clear CTAs and intuitive information architecture. Find the full Figma project <a href="https://www.figma.com/design/CpLgXB7r4Q8IDxfhJ1K574/Politechnika-Krakowska?node-id=0-1&t=5Qkv2zLb520IxafI-1>">here</a><br>.</p>
+      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="500" src="https://embed.figma.com/design/CpLgXB7r4Q8IDxfhJ1K574/Politechnika-Krakowska?node-id=0-1&embed-host=share" allowfullscreen></iframe>
+    </section>
+    <section id="redesign">
     </section>
   </main>
 </body>
