--- a/index2.html
+++ b/index2.html
@@ -92,6 +92,13 @@
       <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="500" src="https://embed.figma.com/design/CpLgXB7r4Q8IDxfhJ1K574/Politechnika-Krakowska?node-id=0-1&embed-host=share" allowfullscreen></iframe>
     </section>
     <section id="redesign">
+      <h2>4. Responsive Redesign</h2>
+      <p>The final deployment of Politechnika's redesigned website can be found <a href="https://jzdzilowska.github.io/politechnika-redesign/">here</a>. The screenshots below display the redesigned website on mobile, tablet, and computer screens.</p>
+      <div class="problemsimgs">
+        <div><img src="images/desktop2.png" alt="Desktop Display (3024 x 1964px)"><p>Desktop (3024 x 1964px)</p></div>
+        <div><img src="images/tablet2.png" alt="Tablet Display (768 x 1024px)"><p>Tablet (768 x 1024px)</p></div>
+        <div><img src="images/phone2.png" alt="Mobile Display (375 x 667px)"><p>Mobile (375 x 667px)</p></div>
+      </div>
     </section>
   </main>
 </body>
