--- a/index2.html
+++ b/index2.html
@@ -103,59 +103,12 @@
         <div><img src="images/tablet2.png" alt="Tablet Display (768 x 1024px)"><p>Tablet (768 x 1024px)</p></div>
         <div><img src="images/phone2.png" alt="Mobile Display (375 x 667px)"><p>Mobile (375 x 667px)</p></div>
       </div>
-      <table>
-        <thead>
-            <tr>
-                <th>Key Issues Identified</th>
-                <th>Description</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Navigation & Efficiency</td>
-                <td>
-                    <ul>
-                        <li><u>Overwhelming Dropdown Menus:</u> The submenus are cluttered with unrelated items, increasing cognitive load.</li>
-                        <li><u>Redundant Elements:</u> Numerous navbars (all 4 of them) and the unnecessary, poorly-labeled accessibility toolbar located on the bottom of the site add confusion.</li>
-                        <li><u>Poor Visibility of Critical Features:</u> Interactive elements in the header blend into static logos. </li>
-                        <li><u>Poor Navbar Positioning:</u> Users must scroll up to access the primary menu.</li>
-                    </ul>
-                </td>
-            </tr>
-            <tr>
-                <td>Learnability</td>
-                <td>
-                    <ul>
-                        <li><u>Inconsistent Design Language and Unclear User Journey:</u> Disjointed color schemes and buttons lacking clear visual priorit make all actions seemingly equally important for first-time users.</li>
-                        <li><u>Overloaded Homepage:</u> Too much text and visuals bury key actions.</li>
-                    </ul>
-                </td>
-            </tr>
-            <tr>
-                <td>Memorability</td>
-                <td>
-                    <ul>
-                        <li><u>Non-Intuitive Navigation:</u> Users are requited to click through multiple pages to find relevant information, with the sheer amount of options available within each navbar either overlapping between the menus (more than 10 links in the head "kandydaci/studenci..." navbar mirror those in the "uczelnia/nauka..." menu), or not relating to each other within the same one. For efficiency, several links could be consolidated, and the entire "na skróty" menu could be removed. ></ty></li>
-                        <li><u>Generic Aesthetic:</u> The text-heavy design fails to leave an impression.</li>
-                        <li><u>Poor Spatial Awareness:</u> Users struggle to retrace steps with the amount of inconsistent visual cues.</li>
-                    </ul>
-                </td>
-            </tr>
-            <tr>
-                <td>Accessibility</td>
-                <td>
-                    <ul>
-                        <li><u>Low Contrast Ratios:</u> Most text fails WCAG standards. Most text shares similar shades of blue, blending into the background.</li>
-                        <li><u>Illegible Text:</u> Small font sizes and poor line spacing make reading difficult.</li>
-                        <li><u>Non-Descriptive Links:</u> Links lack context and are't descriptive.</li>
-                        <li><u>Unlabeled Interactive Elements:</u> Icons lack alt text and/or labels.</li>
-                        <li><u>Unlabeled Images:</u> Nearly all images lack alt text (or are otherwise not descriptive).</li>
-                        <li><u>Non-Responsive Components:</u> Critical content is cut off on narrow screens and viewports different than desktop.</li>
-                    </ul>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+      <h2>Issues Addressed & Implemented Solutions</h2>
+      <p><u>Overwhelming Navigation:</u> Consolidated 4 navbars into 2 primary menus (a general directory and an expandable departments section) and removed redundant links. Implemented expandable hamburger menu for mobile, ensured responsiveness across all screen sizes (no content cropping of menu items), and simplified navigation access with the primary menu consistently sticked the top of the page.<br><br>
+      <u>Poor Responsiveness:</u> Implemented fluid grids ('Explore', 'Recents' sections) and flexible images ('Recents' section), added media queries for breakpoint on mobile, and redesigned components to stack vertically on small screens (the grid within the 'Recents' section changes its shape into a 2x2). All elements adjust to the viewport size: images (within the hero, explore, and recents sections) scale down, and font size decreases gradually rather than jumping at breakpoins.<br><br>
+      <u>Accessibility issues:</u> Increased contrast ratios to meet WCAG AA standards, added descriptive alt text for all images, provided comprehensive titles for all links, implemented proper heading hierarchy, and ensured keyboard navigability.<br><br>
+      <u>Visual clutter:</u> Established consistent color palette and typography, increased white space for decreased cognitive load, and prioritized appropriate content by establishing clear visual hierarchy.<br><br>
+        <u>Poor Learnability:</u> Simplified the homepage to focus on key actions, added hover effects to interactive elements (switch to an italic font style within the navbar, change of background color in the dropdown 'Departments' menu, 'Recents' section, and all buttons to black, scale-up within the 'Explore' grid), and ensured consistent design language throughout the site.<br>
     </section>
   </main>
   <footer>
